--- a/arch/arm64/configs/gemini_defconfig
+++ b/arch/arm64/configs/gemini_defconfig
@@ -84,6 +84,9 @@ CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_BOOST=y
+CONFIG_QUICK_THAW_FINGERPRINTD=y
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
+# CONFIG_CPU_BOOST is not set
 CONFIG_NET=y
 CONFIG_PACKET=y
 CONFIG_UNIX=y
