--- a/arch/arm64/configs/gemini_defconfig
+++ b/arch/arm64/configs/gemini_defconfig
@@ -86,6 +86,8 @@ CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_BOOST=y
 CONFIG_QUICK_THAW_FINGERPRINTD=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
+CONFIG_BOEFFLA_WL_BLOCKER=y
+CONFIG_WIREGUARD=y
 # CONFIG_CPU_BOOST is not set
 CONFIG_NET=y
 CONFIG_PACKET=y
